examples/enemy/ingress_bad.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bad-ing
spec:
  rules:
    - host: demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo
                port:
                  number: 80
